--- a/css/style.css
+++ b/css/style.css
@@ -4761,6 +4761,10 @@ main footer .copyright_wrp .copy_content p {
     padding: 0 0 0.2rem;
     text-align: center !important;
   }
+  .permanentMakeup_Wrapper .Main-premanent_wrp .permanent-service .Slim_content ul li {
+    font-size: 15px;
+    padding: .7rem 0;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -5042,6 +5046,10 @@ main footer .copyright_wrp .copy_content p {
   }
   .HairPigment_Wrapper .Prp-Banner .Banner_Content .Banner_child p {
     padding: .5rem 1rem .5rem 0 !important;
+  }
+  .permanentMakeup_Wrapper .Main-premanent_wrp .permanent-service .Slim_content h2 {
+    font-size: 1.1em;
+    padding: 1rem 0;
   }
 }
 
