--- a/css/media.scss
+++ b/css/media.scss
@@ -1513,6 +1513,27 @@
         font-size: 15px; 
         padding: .7rem 0; 
     } 
+    .permanentMakeup_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss {
+        width: 100%; 
+        padding: 1rem 0 0rem;
+    }
+    .Slimming_Wrapper .Main-content-Wrapper .Weight-Loss_Wrapper .Weight-Loss .Weight-content .W-left figure img {
+        max-width: 65%;
+        border-radius: 50%; 
+        box-shadow: 0 5px 3px 1px #000; 
+    }
+    @keyframes boxshadow {
+        0%, 100%{
+            box-shadow: 0 9px 3px 1px #000; 
+            transform: scale(.99);
+            transition: $transition;
+        }
+        50%{
+            box-shadow: 0 12px 4px 1px #000;
+            transform: scale(1.01);
+            transition: $transition;
+        }
+    }
     // ----Permanent-----End------MakeUp-----Here---
 }
 
@@ -1826,6 +1847,14 @@
         padding: 1rem 0; 
     }
     // --Permanent-----MakeUP---End-------Herer--------//
+    // ----PrpFace-----Page------//
+    .PrpFace_Wrapper .Prp-Banner .Banner_Content .Banner_child p {
+        padding: .5rem 2rem .5rem 0 !important;
+    }
+    .PrpFace_Wrapper .Filler-Banner {
+        background-size: 100% 100%!important;
+    }
+    // -----PrpFace------end-----Here-------//
 }
 
 @media only screen and(max-width:375px){
@@ -1857,7 +1886,7 @@
     } 
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child p {
         font-size: 11px;//13px;
-        padding: .5rem 0 .8rem;
+        padding: .5rem 1.5rem .8rem 0;
         line-height: 1.6;
     } 
     main .Banner_Wrapper .banner-child .owl-next, main .Banner_Wrapper .banner-child .owl-prev{
@@ -1866,7 +1895,7 @@
         font-size: 3em !important;
     }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child p {
-          padding: .5rem 0 .8rem;
+          padding: .5rem 1.5rem .8rem 0;
           line-height: 1.6;
     }
     main .Banner_Wrapper .banner-child .banner-sub-child .Banner_Content .Banner_child a i.fas.fa-chevron-right {
@@ -1874,11 +1903,11 @@
         padding: 0 0 0 .1rem;
     }
     main .Banner_Wrapper .banner-child .owl-dots .owl-dot {
-        width: 10px;
-        height: 10px;
+        width: 8px;
+        height: 8px;
     }
     main .Banner_Wrapper .banner-child .owl-dots {
-        bottom: 14px;
+        bottom: 7px;
         left: 35%;
     }
     // header .top-social-bar .child-wrp .L1 p:last-child {
