--- a/css/media.css
+++ b/css/media.css
@@ -1812,6 +1812,9 @@
   .PrpFace_Wrapper .Filler-Banner {
     background-size: 100% 100% !important;
   }
+  .Scalp_Wrapper .Prp-Banner .Banner_Content .Banner_child p {
+    padding: .5rem 2rem .5rem 0 !important;
+  }
 }
 
 @media only screen and (max-width: 375px) {
@@ -2116,6 +2119,9 @@
   }
   .HairLaser-Wrapper .hairLaser_wrp .hair-Laser01 .subhair-trt-wrp .hair_trt-cmn01 h2 {
     font-size: 1.3em;
+  }
+  .Scalp_Wrapper .Slimming-Banner .Banner_Content .Banner_child .breadcrumb {
+    padding: 0.1rem 0 0;
   }
 }
 /*# sourceMappingURL=media.css.map */
