--- a/css/media.scss
+++ b/css/media.scss
@@ -1855,6 +1855,11 @@
         background-size: 100% 100%!important;
     }
     // -----PrpFace------end-----Here-------//
+    // ---Scalp------Page-------// 
+    .Scalp_Wrapper .Prp-Banner .Banner_Content .Banner_child p {
+        padding: .5rem 2rem .5rem 0 !important;
+    }
+    // -----Sclp------page----end---here----
 }
 
 @media only screen and(max-width:375px){
@@ -2186,5 +2191,11 @@
         font-size: 1.3em;
     }
     // -----Hair---End------Laser-----page---------here---------//
-   
+    
+    // -----scalp----page-----//
+    .Scalp_Wrapper .Slimming-Banner .Banner_Content .Banner_child .breadcrumb {
+        padding: 0.1rem 0 0;
+    }
+
+    // ----end---here---Scalpp--
 }
