--- a/css/style.css
+++ b/css/style.css
@@ -794,7 +794,7 @@ main .Service_wrapper .Service_content .Grid_wrp .Grid-item_cmn01 .grid-hvr-cont
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   background: #f736249c;
-  z-index: 4;
+  z-index: 1;
   opacity: 0;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
@@ -5110,6 +5110,9 @@ main footer .copyright_wrp .copy_content p {
   .PrpFace_Wrapper .Filler-Banner {
     background-size: 100% 100% !important;
   }
+  .Scalp_Wrapper .Prp-Banner .Banner_Content .Banner_child p {
+    padding: .5rem 2rem .5rem 0 !important;
+  }
 }
 
 @media only screen and (max-width: 375px) {
@@ -5414,6 +5417,9 @@ main footer .copyright_wrp .copy_content p {
   }
   .HairLaser-Wrapper .hairLaser_wrp .hair-Laser01 .subhair-trt-wrp .hair_trt-cmn01 h2 {
     font-size: 1.3em;
+  }
+  .Scalp_Wrapper .Slimming-Banner .Banner_Content .Banner_child .breadcrumb {
+    padding: 0.1rem 0 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
