--- a/css/style.css
+++ b/css/style.css
@@ -4285,6 +4285,8 @@ main footer .copyright_wrp .copy_content p {
   }
   .Filler_Wrapper .Main-Filler-content .Filler-Treatment .Filler-content figure img {
     max-width: 64%;
+    -webkit-animation: imganime 3s linear infinite;
+            animation: imganime 3s linear infinite;
   }
   .Thread_Wrapper .Filler-Banner {
     background-position-y: 0 !important;
@@ -5353,7 +5355,7 @@ main footer .copyright_wrp .copy_content p {
     bottom: -63px;
   }
   .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child p {
-    padding: 0.5rem 3rem .5em 0;
+    padding: 0.5rem 3rem 0.5em 0 !important;
     font-size: 11px;
     line-height: 1.7;
   }
